06/m06a01cmdline-handout/grading/2023-10-08-19-47-36/compile.err
UniqueArgs.java:3: error: cannot find symbol
        Set<String> uniqueArgs = new HashSet<>();
        ^
  symbol:   class Set
  location: class UniqueArgs
UniqueArgs.java:3: error: cannot find symbol
        Set<String> uniqueArgs = new HashSet<>();
                                     ^
  symbol:   class HashSet
  location: class UniqueArgs
2 errors
